update to docker and bbs card form

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,19 @@
 FROM python:3.8-alpine
 
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
+# Install required packages
+RUN apk add --virtual .build-deps --no-cache mariadb-connector-c-dev gcc musl-dev
 
+# Set the working directory
 WORKDIR /app/backend
 
+# Copy the requirements file
 COPY requirements.txt /app/backend/
 
-# Build psycopg2-binary from source -- add required required dependencies
-RUN apk add --virtual .build-deps --no-cache postgresql-dev gcc python3-dev musl-dev && \
-        pip install --no-cache-dir -r requirements.txt && \
-        apk --purge del .build-deps
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the application code
 COPY . /app/backend/
 
-CMD [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
+# Set the entrypoint command
+ENTRYPOINT ["python", "manage.py", "runserver", "0.0.0.0:8000"]
